[project]
name = "cache-struct-analyzer"
version = "0.1.0"
description = "Tool to analyze C++ structure layouts for cache performance issues"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pyyaml>=5.4.0",
    "rich>=10.0.0",
    "jinja2>=3.0.0",
]

[project.scripts]
cache-analyzer = "ds_cache_analyzer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# For a script-based project, we need to explicitly tell hatchling what to include
# Since we don't have a package directory, we'll include the script directly
only-include = ["ds_cache_analyzer.py"]

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
